# projectbase

./: .env-exemplo  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/billing/: models.py  services.py  tasks.py  urls.py  views.py
apps/billing/migrations/: 0001_initial.py  0002_delete_customer.py
apps/core/: enums.py  mixins.py  models.py  utils.py  validators.py
apps/saas/: admin.py  apps.py  current_organization.py  managers.py  middleware.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/saas/migrations/: 0001_initial.py  0002_alter_organization_owner.py
config/: celery.py  settings.py  urls.py
config/settings/: base.py  local.py  prodution.py
