[tool.poetry]
name = "saas_project"
version = "0.1.0"
description = "A modern SaaS platform built with Django."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.4"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
django-allauth = "^0.61.1"
django-filter = "^24.2"
gunicorn = "^22.0.0"
celery = "^5.3.6"
redis = "^5.0.4"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"
django-celery-results = "^2.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
black = "^24.4.2"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"config/settings/*" = ["F401"]
"manage.py" = ["E402"]
"apps/manage.py" = ["E402"]
"apps/core/enums.py" = ["E402"]
"apps/core/singnals.py" = ["F401"]
"apps/core/validators.py" = ["E402"]
"apps/accounts/managers.py" = ["E402"]
"apps/saas/managers.py" = ["E402"]
